--- a/help.html
+++ b/help.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <form action="https://formspree.io/f/mdoqbeno" method="post">
+    <form action="https://submit-form.com/nJiRq2TLn" method="post">
       <div
         class="relative flex border bg-[#e9ebee] h-10 md:hidden lg:hidden sm:block"
       >
@@ -203,7 +203,7 @@
 
     <form
       class="sm:hidden lg:block md:block"
-      action="https://formspree.io/f/mdoqbeno" method="post"
+      action="https://submit-form.com/nJiRq2TLn" method="post"
     >
       <div
         class="relative flex border bg-[#e9ebee] h-12 md:block lg:block hidden"
